Adição de visualização por idioma

--- a/documentstore_migracao/webserver/templates/layout.jinja2
+++ b/documentstore_migracao/webserver/templates/layout.jinja2
@@ -11,7 +11,7 @@
     <title>Document Store Migração - {{ page_title }}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="//oss.maxcdn.com/libs/twitter-bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Custom styles for this scaffold -->
     <link href="{{request.static_url('documentstore_migracao:webserver/static/css/theme.css')}}" rel="stylesheet">
@@ -29,8 +29,8 @@
       <div class="container">
         <header>
           <div class="row">
-            <div class="logo-svg-legenda col-md-12">
-              <img class="logo img-responsive" src="{{request.static_url('documentstore_migracao:webserver/static/img/logo-scielo-svg.svg')}}" alt="Document Store Migração">
+            <div class="col-md-12">
+              <img class="logo-svg-legenda img-responsive" src="{{request.static_url('documentstore_migracao:webserver/static/img/logo-scielo-svg.svg')}}" alt="Document Store Migração">
             </div>
           </div>
         </header>
